// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderView /> and children Should render 1`] = `
<Header>
  <ul
    className="tabsMenu"
  >
    <Tab
      active={true}
      hendlerTab={[Function]}
      itemKey="mainModule"
      key="mainModule"
      sizeTab={160}
    />
  </ul>
  <RightPanel
    active={true}
    notificationDep={
      Object {
        "filterStream": "uidCreater",
        "onSaveComponentState": undefined,
        "store": "redux",
        "streamModule": "system",
        "streamStore": "streamList",
      }
    }
    onLogout={[Function]}
    onUpdate={[Function]}
  />
</Header>
`;

exports[`<HeaderView /> and children Should render 2`] = `
<Header>
  <ul
    className="tabsMenu"
  >
    <Tab
      active={false}
      hendlerTab={[Function]}
      itemKey="mainModule1"
      key="mainModule1"
      sizeTab={160}
    />
  </ul>
  <RightPanel
    active={true}
    notificationDep={
      Object {
        "filterStream": "uidCreater",
        "onSaveComponentState": undefined,
        "store": "redux",
        "streamModule": "system",
        "streamStore": "streamList",
      }
    }
    onLogout={[Function]}
    onUpdate={[Function]}
  />
</Header>
`;
